--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
   </head>
 
   <body>
-    <canvas id="pinkboard"> </canvas>
+    <canvas id="pinkboard">
+    <p> Hello</p>
+      
+    </canvas>
 
     <script>
       var settings = {
