--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           size: 28, // particle size in pixels
         },
       };
-
+// hehhe
       /*
        * RequestAnimationFrame polyfill by Erik Möller
        */
