--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="Author" content="" />
     <meta name="Keywords" content="" />
     <meta name="Description" content="" />
-    <style>                                                                                     
+    <style>     
+    /* Quang                                                                                 */
       html, body {
         height: 100%;
         padding: 0;
