--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
   <body>
     <canvas id="pinkboard">
-    <p> Hi</p>
+    <p> hrbeuwjns</p>
       
     </canvas>
 
@@ -42,7 +42,7 @@
           size: 28, // particle size in pixels
         },
       };
-
+    
       /*
        * RequestAnimationFrame polyfill by Erik Möller
        */
