--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           size: 28, // particle size in pixels
         },
       };
-// hehhe
+// hehhek
       /*
        * RequestAnimationFrame polyfill by Erik Möller
        */
